// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/MaterialKanjiTxt default 1`] = `
<p
  className="makeStyles-root-233 makeStyles-root-234 makeStyles-root-232"
>
  秋の田の かりほの庵の 苫をあらみ
  <br />
  わが衣手は 露にぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanjiTxt with custom separate 1`] = `
<p
  className="makeStyles-root-245 makeStyles-root-246 makeStyles-root-244"
>
  秋の田の かりほの庵の 苫をあらみ
   
  わが衣手は 露にぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanjiTxt with size l 1`] = `
<p
  className="makeStyles-root-242 makeStyles-root-243 makeStyles-root-241"
>
  秋の田の かりほの庵の 苫をあらみ
  <br />
  わが衣手は 露にぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanjiTxt with size m 1`] = `
<p
  className="makeStyles-root-239 makeStyles-root-240 makeStyles-root-238"
>
  秋の田の かりほの庵の 苫をあらみ
  <br />
  わが衣手は 露にぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanjiTxt with size s 1`] = `
<p
  className="makeStyles-root-236 makeStyles-root-237 makeStyles-root-235"
>
  秋の田の かりほの庵の 苫をあらみ
  <br />
  わが衣手は 露にぬれつつ
</p>
`;
